fix layout shifts

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,10 +37,6 @@ body {
   color: rgb(var(--clr-foreground));
 }
 
-header {
-  margin-bottom: auto;
-}
-
 main {
   padding-block: var(--padding-inline);
 }
